kanidm: Add version 2 to config

--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -41,6 +41,8 @@ app-template:
       enabled: true
       data:
         server.toml: |
+          version = "2"
+
           bindaddress = "0.0.0.0:8443"
           ldapbindaddress = "0.0.0.0:3636"
           #
