--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -55,7 +55,7 @@ app-template:
           role = "WriteReplica"
 
           [http_client_address_info]
-          x-forward-for = ["0.0.0.0/0"]
+          x-forward-for-all-source-trusted = true
 
           [online_backup]
           path = "/data/kanidm/backups/"
