--- a/apps/nextcloud/templates/pvc.yaml
+++ b/apps/nextcloud/templates/pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app.kubernetes.io/component: app
+    app.kubernetes.io/controller: app
     app.kubernetes.io/instance: nextcloud
     app.kubernetes.io/name: nextcloud
     backup: nextcloud-zfs
