--- a/apps/telegram-bot/templates/mongo/statefulset.yaml
+++ b/apps/telegram-bot/templates/mongo/statefulset.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/component: database
+      app.kubernetes.io/controller: database
       app.kubernetes.io/instance: mongo
       app.kubernetes.io/name: telegram-bot
   serviceName: mongo
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/component: database
+        app.kubernetes.io/controller: database
         app.kubernetes.io/instance: mongo
         app.kubernetes.io/name: telegram-bot
     spec:
