Revert "app-template: Fix affinity/antiffinity component label to controller"
This reverts commit d64a35c732fdedfd57fa7a1ba1057edafeb6332f.

--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -98,7 +98,7 @@ app-template:
                       operator: In
                       values:
                         - home-assistant
-                    - key: app.kubernetes.io/controller
+                    - key: app.kubernetes.io/component
                       operator: In
                       values:
                         - hass
