--- a/apps/open-webui/values.yaml
+++ b/apps/open-webui/values.yaml
@@ -18,7 +18,7 @@ open-webui:
         requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
-                - key: app.kubernetes.io/controller
+                - key: app.kubernetes.io/component
                   operator: In
                   values:
                     - open-webui
