kroki: Change deployment strategy to rolling update

--- a/apps/kroki/values.yaml
+++ b/apps/kroki/values.yaml
@@ -2,6 +2,7 @@ app-template:
   controllers:
     kroki:
       replicas: 1
+      strategy: RollingUpdate
       containers:
         kroki:
           image:
