renovate: Disable automerge for appdaemon minor updates

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -120,6 +120,7 @@
       ],
       matchPackageNames: [
         'kanidm',
+        'appdaemon'
       ],
       matchCurrentVersion: '!/^0/',
       automerge: false,
