renovate: Change matches disable automerge with regex

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -178,8 +178,8 @@
         'minor',
       ],
       matchPackageNames: [
-        'kanidm',
-        'acockburn/appdaemon',
+        '/kanidm/',
+        '/appdaemon/',
       ],
       matchCurrentVersion: '!/^0/',
       automerge: false,
