--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -35,7 +35,7 @@
     {
       customType: 'regex',
       description: 'Process custom dependencies with double quotes, after colon, URLs and variables',
-      fileMatch: [
+      managerFilePatterns: [
         '/.+\\.ya?ml$/',
       ],
       matchStrings: [
