--- a/apps/esphome/config/packages/irrigation-controller.yaml
+++ b/apps/esphome/config/packages/irrigation-controller.yaml
@@ -56,7 +56,7 @@ binary_sensor:
 
   # Turn on the LED when any relay is on
   - platform: template
-    name: "Any Relay On"
+    name: "{friendly_name} Any Relay On"
     lambda: |-
       return id(relay_1).state || id(relay_2).state;
     on_press:
@@ -103,7 +103,7 @@ sprinkler:
     auto_advance_switch: "${friendly_name} Auto Advance"
     multiplier_number:
       name: "${friendly_name} Multiplier"
-      initial_value: 1.5
+      initial_value: 1
       min_value: 0.1
       max_value: 5
       step: 0.1
