esphome: Refactor irrigator, rename entities and add scheduler

--- a/apps/esphome/config/irrigation-controller-corner.yaml
+++ b/apps/esphome/config/irrigation-controller-corner.yaml
@@ -1,6 +1,7 @@
 substitutions:
   name: "irrigation-controller-corner"
   friendly_name: "Irrigation Controller Corner"
+  id_prefix: "ic_corner_"
   project_name: "pando85.irrigation-controller"
   project_version: "0.0.0"
 
