--- a/apps/esphome/config/irrigation-controller-mid.yaml
+++ b/apps/esphome/config/irrigation-controller-mid.yaml
@@ -1,6 +1,7 @@
 substitutions:
   name: "irrigation-controller-mid"
   friendly_name: "Irrigation Controller Mid"
+  id_prefix: "ic_mid_"
   project_name: "pando85.irrigation-controller"
   project_version: "0.0.0"
 
