--- a/apps/esphome/config/packages/irrigation-controller.yaml
+++ b/apps/esphome/config/packages/irrigation-controller.yaml
@@ -166,7 +166,7 @@ datetime:
   - platform: template
     name: Schedule Start Time
     entity_category: config
-    id: s1t
+    id: schedule_start_time
     type: time
     optimistic: true
     restore_value: true
@@ -184,33 +184,32 @@ time:
       then:
         - logger.log: "Synchronized system clock"
 
-
 script:
-    - id: check_schedule
-      then:
-        lambda: |-
-          int dow = id(ha_time).now().day_of_week;
-          if (
-            (dow == 1 && id(sunday).state == true) ||
-            (dow == 2 && id(monday).state == true) ||
-            (dow == 3 && id(tuesday).state == true) ||
-            (dow == 4 && id(wednesday).state == true) ||
-            (dow == 5 && id(thursday).state == true) ||
-            (dow == 6 && id(friday).state == true) ||
-            (dow == 7 && id(saturday).state == true)
-            ) {
-              int hour = id(ha_time).now().hour;
-              int minute = id(ha_time).now().minute;
-              if (
-                  (hour == id(s1t).hour &&
-                  minute == id(s1t).minute &&
-                  id(schedule_enabled).state == true)
-                  ) {
-                id(run_cycle).execute();
-              }
-          }
+  - id: check_schedule
+    then:
+      lambda: |-
+        int dow = id(ha_time).now().day_of_week;
+        if (
+          (dow == 1 && id(sunday).state == true) ||
+          (dow == 2 && id(monday).state == true) ||
+          (dow == 3 && id(tuesday).state == true) ||
+          (dow == 4 && id(wednesday).state == true) ||
+          (dow == 5 && id(thursday).state == true) ||
+          (dow == 6 && id(friday).state == true) ||
+          (dow == 7 && id(saturday).state == true)
+          ) {
+            int hour = id(ha_time).now().hour;
+            int minute = id(ha_time).now().minute;
+            if (
+                (hour == id(schedule_start_time).hour &&
+                minute == id(schedule_start_time).minute &&
+                id(schedule_enabled).state == true)
+                ) {
+              id(run_cycle).execute();
+            }
+        }
 
-    - id: run_cycle
-      then:
-        - sprinkler.start_full_cycle: irrigation_controller
-        - lambda: ESP_LOGI("main", "Sprinkler cycle has begun!");
+  - id: run_cycle
+    then:
+      - sprinkler.start_full_cycle: irrigation_controller
+      - lambda: ESP_LOGI("main", "Sprinkler cycle has begun!");
