esphome: Add `fast_connect: true` to WiFi
Connection will skip scanning SSIDs. It will speed up connection times,
the downside is if two AP are in the network it will connect always to the same one.

--- a/apps/esphome/config/packages/connection.yaml
+++ b/apps/esphome/config/packages/connection.yaml
@@ -17,6 +17,10 @@ wifi:
   password: !secret wifi_password
   domain: !secret domain_devices
 
+  # Avoid scanning, which in case that multiple AP are available it will not connect to the one
+  # with the best signal
+  fast_connect: true
+
   ap:
     ap_timeout: 1h
     ssid: "${friendly_name}"
